fix(api): fix request object
